# osg_pack

./: .gitattributes  .gitignore  BUILD_LIBS.bat  BUILD_LIBS.sh  BUILD_LIBS_2015.bat  BUILD_LIBS_2019.bat  CHANGE_OWNERSHIP.sh  COPY_LIBS.bat  COPY_LIBS_2015.bat  COPY_LIBS_2019.bat  README.md  dependencies_linux.txt  dependencies_windows.txt
prebuilt/linux/ecw/include/: ECWJP2BuildNumber.h  NCSArray.h  NCSBufferedIOStream.h  NCSDefs.h  NCSECWClient.h  NCSECWCompressClient.h  NCSECWHeaderEditor.h  NCSFile.h  NCSFileIO.h  NCSHttpClient.h  NCSILogger.h  NCSMalloc.h  NCSMemoryIOStream.h  NCSMultiLock.h  NCSMutex.h  NCSPackets.h  NCSPrefs.h  NCSString.h  NCSTimeStamp.h  (+3 more)
sources/: versions.txt
sources/OpenSceneGraph/: ChangeLog
sources/gcsfunc/: CMakeLists.txt  gcsfunc.cpp  gcsfunc.h
sources/gdal/: nmake_debug.opt  nmake_debug_2015.opt  nmake_debug_2019.opt  nmake_release.opt  nmake_release_2015.opt  nmake_release_2019.opt
sources/geos/: ChangeLog  Makefile.in  aclocal.m4  autogen.bat  configure  nmake.opt
sources/geos/benchmarks/: Makefile.in
sources/geos/capi/: Makefile.in
sources/geos/doc/: Doxyfile  Makefile.in
sources/geos/include/: Makefile.in  config.h.in
sources/geos/macros/: Makefile.in
sources/geos/src/: Makefile.in
sources/geos/swig/: Makefile.in  geos.i
sources/geos/tests/: Makefile.in
sources/geos/tools/: Makefile.in
sources/libgeotiff/: CMakeLists.txt
sources/pnageo/: CMakeLists.txt  ngeo.cpp  ngeo.h
sources/proj/: README  configure
sources/proj/cmake/: Makefile.in
sources/proj/src/: Makefile.in
sources/protobuf/java/: pom.xml
(+314 files in other folders)
